[package]
name = "images-glue-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Web APIs (keep feature list tight)
web-sys = { version = "0.3", features = [
  "Blob",
  "CanvasRenderingContext2d",
  "ClipboardEvent",
  "console",
  "DataTransfer",
  "DataTransferItemList",
  "DataTransferItem",
  "Document",
  "DragEvent",
  "Element",
  "CssStyleDeclaration",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "ImageBitmap",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "PointerEvent",
  "Url",
  "Window",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 1
